--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 services:
   web1:
     build: .
-    container_name: web1
+    container_name: exercise_web1
     working_dir: /app
     ports:
       - 8080:8080
@@ -19,7 +19,7 @@ services:
     restart: always
   mysql:
     image: mysql:5.7
-    container_name: mysql
+    container_name: exercise_mysql
     networks:
       server_network:
         ipv4_address: 10.38.58.98
