--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       server_network:
         ipv4_address: 10.38.58.98
     volumes:
-      - ./mysql:/var/lib/mysql
+      - ./mysql2:/var/lib/mysql
     ports:
       - 3396:3306
     environment:
